Fixed the jump on start. Now using the computed bottom and left for start location. In future need to swap to CSS animation. (plus animation really needs to end at viewport top right, not window top right)

--- a/Open Space/task/src/css/open-space-style.css
+++ b/Open Space/task/src/css/open-space-style.css
@@ -28,7 +28,7 @@ body, html {
 .rocket {
     position: absolute;
     width: 5%;
-    bottom: 33%;
+    bottom: 20%;
     left: 15%;
     z-index: 2;
     transform: rotate(35deg);
